--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "discord.js-commando": "^0.9.0",
-    "node": "^10.8.0"
+    "node": "^10.8.0",
+    "node-fetch": "^2.6.1"
   }
 }
